# QQ-Bot-New

./: .gitignore  BotConfig.ini  README.md  pyproject.toml
Bot/: Bot.py
Interface/: Api.py
Plugins/: __init__.py  groups.ini  plugins.ini
Plugins/AI/: AI.py  __init__.py  config.ini
Plugins/AIAssistant/: AIAssistant.py  config.ini
Plugins/Anitabi/: config.ini
Plugins/CardComf/: CardComf.py  config.ini
Plugins/Ciallo/: config.ini
Plugins/DailyWord/: config.ini
Plugins/Deepseek/: config.ini
Plugins/DontPoke/: DontPoke.py  config.ini
Plugins/EmojiLike/: EmojiLike.py  config.ini
Plugins/ErrorTest/: config.ini
Plugins/ExamplePlugin/: ExamplePlugin.py  __init__.py
Plugins/GetStuId/: GetStuId.py  __init__.py
Plugins/GoodMorning/: config.ini
Plugins/Goujiao/: config.ini
Plugins/GroupApprove/: GroupApprove.py  config.ini
Plugins/LineCount/: LineCount.py  __init__.py
Plugins/LineCountData/: LineCountData.py  __init__.py
Plugins/MoeGoe/: MoeGoe.py
Plugins/Otto/: config.ini
Plugins/QiuDao/: QiuDao.py  config.ini
Plugins/QiuDao1/: QiuDao1.py
Plugins/QiuDaoData/: QiuDaoData.py  __init__.py
Plugins/RecallPrevent/: RecallPrevent.py  config.ini
Plugins/Repeater/: Repeater.py  config.ini
Plugins/SayHello/: config.ini
Plugins/Screenshot/: config.ini
Plugins/SelectLineCount/: SelectLineCount.py
Plugins/TestPlugins/: TestPlugins.py  config.ini
Plugins/TestTimer/: config.ini
Plugins/TheresaAI/: TheresaAI.py  __init__.py  config.ini
Plugins/TheresaBan/: TheresaBan.py  __init__.py  config.ini
Plugins/TheresaCard/: TheresaCard.py  (+1 more)
(+33 files in other folders)
