[project]
name = "theresa"
version = "1.0.0"
description = "qq-bot framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "colorama==0.4.6",
    "emoji<2.0.0",
    "flask==2.3.2",
    "gevent>=25.9.1",
    "openai==2.11.0",
    "pillow==12.0.0",
    "pilmoji==2.0.4",
    "redis==7.1.0",
    "requests==2.31.0",
    "sqlalchemy>=2.0.46",
]
